added view to Fight card
