# sports/serializers.py
@@ -2,7 +2,7 @@ from rest_framework import serializers
 
 from api.dev import get_logger
 
-from .models import FighterModel, UpcomingEventsModel
+from .models import FightFighterModel, FightModel, FighterModel, UpcomingEventsModel
 
 logger = get_logger(__name__)
 
@@ -31,3 +31,19 @@ class FighterSerializer(serializers.ModelSerializer):
     class Meta:  # pyright: ignore
         model = FighterModel
         fields = "__all__"
+
+
+class FightFighterSerializer(serializers.ModelSerializer):
+    fighter = FighterSerializer()
+
+    class Meta:  # pyright: ignore
+        model = FightFighterModel
+        fields = ['fighter']
+
+
+class CardSerializer(serializers.ModelSerializer):
+    fighters = FightFighterSerializer(source='fightfightermodel_set', many=True)
+
+    class Meta:  # pyright: ignore
+        model = FightModel
+        fields = ['fight_id', 'weight_class', 'status', 'event', 'fighters']
